--- a/src/java/properties/pageAlias.properties
+++ b/src/java/properties/pageAlias.properties
@@ -10,3 +10,5 @@ listReader=/listReader.jsp
 listTakeBook=/listTakeBooks.jsp
 newBook=/WEB-INF/pages/newBook.jsp
 newReader=/WEB-INF/pages/newReader.jsp
+
+newRole=/WEB-INF/pages/newRole.jsp
