Добавление в проект User ADMIN

--- a/src/java/properties/pageAlias.properties
+++ b/src/java/properties/pageAlias.properties
@@ -12,3 +12,4 @@ newBook=/WEB-INF/pages/newBook.jsp
 newReader=/WEB-INF/pages/newReader.jsp
 
 newRole=/WEB-INF/pages/newRole.jsp
+editUsersRole=/WEB-INF/pages/editUsersRole.jsp
