Использование LOGIN  ADMIN

--- a/src/java/properties/pageAlias.properties
+++ b/src/java/properties/pageAlias.properties
@@ -13,3 +13,4 @@ newReader=/WEB-INF/pages/newReader.jsp
 
 newRole=/WEB-INF/pages/newRole.jsp
 editUserRoles=/WEB-INF/pages/editUserRoles.jsp
+showLogin=/showLogin.jsp
