Реализована авторизация.Защита ресурсов.Инициализация суперпользователя newRoles

--- a/src/java/properties/pageAlias.properties
+++ b/src/java/properties/pageAlias.properties
@@ -3,7 +3,7 @@
 # and open the template in the editor.
 
 page1=/page1.jsp
-welcom=/welcome.jsp
+welcome=/welcome.jsp
 takeBook=/library.jsp
 listBook=/listBooks.jsp
 listReader=/listReader.jsp
@@ -11,6 +11,6 @@ listTakeBook=/listTakeBooks.jsp
 newBook=/WEB-INF/pages/newBook.jsp
 newReader=/WEB-INF/pages/newReader.jsp
 
-newRole=/WEB-INF/pages/newRole.jsp
+newRoles=/WEB-INF/pages/newRole.jsp
 editUserRoles=/WEB-INF/pages/editUserRoles.jsp
 showLogin=/showLogin.jsp
